i OS 결제창 안뜨는 문제 해결, 결제창 닫을 시 close 추가, 모바일에서 결체완료 후 부모창 리로드 추가

--- a/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
@@ -127,7 +127,7 @@
 										<td th:text="${result.deal.maxBidPrc} + ' KRW'"></td>
 									</th:block>
 									<th:block th:unless="${not #strings.isEmpty(result.deal.maxBidPrc)}">
-										<td th:text="${result.deal.dealStrtPrc} + ' KRW'"></td>
+										<td>0 KRW</td>
 									</th:block>
 									</tr>
 									<!-- <tr class="t-red">
