--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_sell.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_sell.html
@@ -626,7 +626,8 @@ function btn_payment(){
 					if(!isMobile){
 						Mainpay.open(response.data.nextPcUrl);
 					}else{
-						location.href = response.data.nextPcUrl.replace("pc", "mobile");
+						//location.href = response.data.nextPcUrl.replace("pc", "mobile");
+						window.open(response.data.nextMobileUrl);
 					}
 					return false;
 				}
