--- a/src/main/resources/templates/thymeleaf/fo/myPage/collection_mod.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/collection_mod.html
@@ -82,7 +82,10 @@
 											<label for="workMainImgUrl">찾아보기</label> 
 											<input type="file" id="workMainImgUrl" class="upload-hidden" th:value="${result.workMainImgUrl}"> 
 										</div>
-										<p class="table-p">※ 작품이 꽉 차게 나온 대표 사진 입니다. 관리자가 배경을 제거하고 다시 등록할 수 있습니다.</p>
+										<p class="table-p">
+											※ 작품이 꽉 차게 나온 대표 사진 입니다. 관리자가 배경을 제거하고 다시 등록할 수 있습니다.<br/>
+											※ 파일 확장자는 jpg, jpeg로 용량은 5MB 미만으로 등록해주세요.
+										</p>
 									</td>
 								</tr>
 								<tr>
@@ -94,7 +97,10 @@
 											<label for="workImgFrtUrl">찾아보기</label> 
 											<input type="file" id="workImgFrtUrl" class="upload-hidden" th:value="${result.workImgFrtUrl}"> 
 										</div>
-										<p class="table-p">※ 작품이 꽉 차게 나온 전면 사진 입니다. 관리자가 배경을 제거하고 다시 등록할 수 있습니다.</p>
+										<p class="table-p">
+											※ 작품이 꽉 차게 나온 전면 사진 입니다. 관리자가 배경을 제거하고 다시 등록할 수 있습니다.<br/>
+											※ 파일 확장자는 jpg, jpeg로 용량은 5MB 미만으로 등록해주세요.
+										</p>
 									</td>
 								</tr>
 								<tr>
@@ -106,7 +112,10 @@
 											<label for="workImgRerUrl">찾아보기</label> 
 											<input type="file" id="workImgRerUrl" class="upload-hidden" th:value="${result.workImgRerUrl}">  
 										</div>
-										<p class="table-p">※ 작품이 꽉 차게 나온 후면 사진 입니다. 관리자가 배경을 제거하고 다시 등록할 수 있습니다.</p>
+										<p class="table-p">
+											※ 작품이 꽉 차게 나온 후면 사진 입니다. 관리자가 배경을 제거하고 다시 등록할 수 있습니다.<br/>
+											※ 파일 확장자는 jpg, jpeg로 용량은 5MB 미만으로 등록해주세요.
+										</p>
 									</td>
 								</tr>
 								<tr>
@@ -180,8 +189,8 @@
 											<input type="file" id="workGrtUrl" class="upload-hidden" accept=".jpeg, .jpg, .png, .pdf" th:value="${result.workGrtUrl}"> 
 										</div>
 										<p class="table-p">
-											※ png, jpeg, pdf 형식으로 등록 해주세요<br/>
-											※ 향후에 거래로 등록 할 때에는 보증서 등록이 필요합니다. 보증서를 분실하셨다면 구매처에 재발급을 요청하시기 바랍니다.
+											※ 향후에 거래로 등록 할 때에는 보증서 등록이 필요합니다. 보증서를 분실하셨다면 구매처에 재발급을 요청하시기 바랍니다.<br/>
+											※ 파일 확장자는 jpg, jpeg로 용량은 5MB 미만으로 등록해주세요.
 										</p>
 									</td>
 								</tr>
@@ -221,7 +230,11 @@
 											<label for="workImgLefUrl">찾아보기</label> 
 											<input type="file" id="workImgLefUrl" class="upload-hidden" th:value="${result.workImgLefUrl}"> 
 										</div>
-										<p class="table-p">※ 작품의 질감, 액자의 파손, 크랙, 찢어짐 등 작품 상태와 관련된 사진을 등록해 주세요. (최대5장)<br/>배송 완료 시점에 사진과 다른 경우 구매자는 수취를 거부할 수 있습니다.</p>
+										<p class="table-p">
+											※ 작품의 질감, 액자의 파손, 크랙, 찢어짐 등 작품 상태와 관련된 사진을 등록해 주세요. (최대5장)<br/>
+											※ 배송 완료 시점에 사진과 다른 경우 구매자는 수취를 거부할 수 있습니다.<br/>
+											※ 파일 확장자는 jpg, jpeg로 용량은 5MB 미만으로 등록해주세요.
+										</p>
 									</td>
 								</tr>
 								<tr>
@@ -233,7 +246,11 @@
 											<label for="workImgRitUrl">찾아보기</label> 
 											<input type="file" id="workImgRitUrl" class="upload-hidden" th:value="${result.workImgRitUrl}"> 
 										</div>
-										<p class="table-p">※ 작품의 질감, 액자의 파손, 크랙, 찢어짐 등 작품 상태와 관련된 사진을 등록해 주세요. (최대5장)<br/>배송 완료 시점에 사진과 다른 경우 구매자는 수취를 거부할 수 있습니다.</p>
+										<p class="table-p">
+											※ 작품의 질감, 액자의 파손, 크랙, 찢어짐 등 작품 상태와 관련된 사진을 등록해 주세요. (최대5장)<br/>
+											※ 배송 완료 시점에 사진과 다른 경우 구매자는 수취를 거부할 수 있습니다.<br/>
+											※ 파일 확장자는 jpg, jpeg로 용량은 5MB 미만으로 등록해주세요.
+										</p>
 									</td>
 								</tr>
 								<tr>
@@ -245,7 +262,11 @@
 											<label for="workImgTopUrl">찾아보기</label> 
 											<input type="file" id="workImgTopUrl" class="upload-hidden" th:value="${result.workImgTopUrl}"> 
 										</div>
-										<p class="table-p">※ 작품의 질감, 액자의 파손, 크랙, 찢어짐 등 작품 상태와 관련된 사진을 등록해 주세요. (최대5장)<br/>배송 완료 시점에 사진과 다른 경우 구매자는 수취를 거부할 수 있습니다.</p>
+										<p class="table-p">
+											※ 작품의 질감, 액자의 파손, 크랙, 찢어짐 등 작품 상태와 관련된 사진을 등록해 주세요. (최대5장)<br/>
+											※ 배송 완료 시점에 사진과 다른 경우 구매자는 수취를 거부할 수 있습니다.<br/>
+											※ 파일 확장자는 jpg, jpeg로 용량은 5MB 미만으로 등록해주세요.
+										</p>
 									</td>
 								</tr>
 								<tr>
@@ -257,7 +278,11 @@
 											<label for="workImgBotUrl">찾아보기</label> 
 											<input type="file" id="workImgBotUrl" class="upload-hidden" th:value="${result.workImgBotUrl}"> 
 										</div>
-										<p class="table-p">※ 작품의 질감, 액자의 파손, 크랙, 찢어짐 등 작품 상태와 관련된 사진을 등록해 주세요. (최대5장)<br/>배송 완료 시점에 사진과 다른 경우 구매자는 수취를 거부할 수 있습니다.</p>
+										<p class="table-p">
+											※ 작품의 질감, 액자의 파손, 크랙, 찢어짐 등 작품 상태와 관련된 사진을 등록해 주세요. (최대5장)<br/>
+											※ 배송 완료 시점에 사진과 다른 경우 구매자는 수취를 거부할 수 있습니다.<br/>
+											※ 파일 확장자는 jpg, jpeg로 용량은 5MB 미만으로 등록해주세요.
+										</p>
 									</td>
 								</tr>
 								<tr>
@@ -613,6 +638,8 @@ function collectionReg(){
 		result.workVideoUrl = $("#workVideoUrl").val();
 		result.workIntrdc = $("#workIntrdc").val();
 		result.keywrd = $("#keywrd").val();
+		result.workLake = $("#workLake").val();
+		
 		const formData = new FormData();
 		//작품 대표 사진
 		const workMainImgUrl = document.getElementById("workMainImgUrl");
@@ -695,7 +722,7 @@ function collectionReg(){
 	        processData : false,
 	        success: function(data) {
 	        	if(data != 0 || data != null || data != ""){
-	        		modalAlertShow("성공적으로 저장되었습니다.", "reload");
+	        		modalAlertShow("성공적으로 저장되었습니다.", "myCollection");
 	        	}
 	        },
 	        error: function(error) {
