--- a/src/main/resources/templates/thymeleaf/result_work.html
+++ b/src/main/resources/templates/thymeleaf/result_work.html
@@ -92,7 +92,7 @@
 										<input type="checkbox" id="c22" name="workClsfcCd" value="EDITION" class="searchOption" onclick="dealSearch()"/>
 										<label for="c22"><span></span>에디션</label><br/>
 										<input type="checkbox" id="c33" name="workClsfcCd" value="PICTURE" class="searchOption" onclick="dealSearch()"/>
-										<label for="c33"><span></span>그림</label>
+										<label for="c33"><span></span>사진</label>
 										<!-- <input type="checkbox" id="c1" name="workClsfcCd" value="ORNTPAI" class="searchOption" onclick="dealSearch()"/>
 										<label for="c1"><span></span>동양화</label><br/>
 										<input type="checkbox" id="c2" name="workClsfcCd" value="WSTNPAI" class="searchOption" onclick="dealSearch()"/>
@@ -107,7 +107,7 @@
 								</div>
 							</div>
 							<div class="panel panel-default">
-								<div class="panel-heading" role="tab" id="heading5">
+								<!-- <div class="panel-heading" role="tab" id="heading5">
 									<h4 class="panel-title">
 										<a data-toggle="collapse" data-parent="#accordion5" href="#collapse5" aria-expanded="true" aria-controls="collapse5">
 											유형
@@ -118,7 +118,7 @@
 									<div class="panel-body">
 									
 									</div>
-								</div>
+								</div> -->
 							</div>
 							<div class="panel panel-default">
 								<div class="panel-heading" role="tab" id="heading6">
@@ -298,8 +298,8 @@
 													<label for="o1"><span></span>평면</label><br/>
 													<input type="checkbox" id="o2" name="workShpCd" value="SLD" class="searchOption"/>
 													<label for="o2"><span></span>입체</label><br/>
-													<input type="checkbox" id="o3" name="workShpCd" value="NFT" class="searchOption"/>
-													<label for="o3"><span></span>NFT</label>
+													<!-- <input type="checkbox" id="o3" name="workShpCd" value="NFT" class="searchOption"/>
+													<label for="o3"><span></span>NFT</label> -->
 												</div>
 											</li>
 											<li role="presentation">
@@ -312,7 +312,7 @@
 													<input type="checkbox" id="i22" name="workClsfcCd" value="EDITION" class="searchOption"/>
 													<label for="i22"><span></span>에디션</label><br/>
 													<input type="checkbox" id="i33" name="workClsfcCd" value="PICTURE" class="searchOption"/>
-													<label for="i33"><span></span>그림</label><br/>
+													<label for="i33"><span></span>사진</label><br/>
 													<!-- <input type="checkbox" id="i1" name="workClsfcCd" value="ORNTPAI" class="searchOption"/>
 													<label for="i1"><span></span>동양화</label><br/>
 													<input type="checkbox" id="i2" name="workClsfcCd" value="WSTNPAI" class="searchOption"/>
@@ -534,7 +534,7 @@
 							</div>
 							<div class="db-div">
                                 <input type="checkbox" id="v33" name="workClsfcCd" value="PICTURE" class="searchOption"/>
-								<label for="v33"><span></span>그림</label>
+								<label for="v33"><span></span>사진</label>
 							</div>
 							<!-- <div class="db-div">
                                 <input type="checkbox" id="v1" name="workClsfcCd" value="ORNTPAI" class="searchOption"/>
