--- a/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetail.html
+++ b/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetail.html
@@ -15,11 +15,10 @@
 		
 			<ul class="nav nav-pills ait-nav" id="pills-tab" role="tablist">
 				<li class="nav-item active">
-					<a class="nav-link" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">작가프로필보기</a>
+					<a class="nav-link" id="pills-home-tab" data-toggle="pill" role="tab" aria-controls="pills-home" aria-selected="true">작가프로필보기</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false">작품보기</a>
-					
+					<a class="nav-link" id="pills-profile-tab" data-toggle="pill" role="tab" aria-controls="pills-profile" aria-selected="false">작품보기</a>
 				</li>
 			</ul>
 			<div class="tab-content ait-tab" id="pills-tabContent">
@@ -240,7 +239,7 @@ $(function() {
 		artstInfoHtml += '	<dt>인터뷰영상</dt>';
 		artstInfoHtml += '	<dd>';
 		if(artstInfo.artistInfo.artstPromtnVideoUrl != null && artstInfo.artistInfo.artstPromtnVideoUrl != ""){
-			artstInfoHtml += '		<p>https://'+ artstInfo.artistInfo.artstPromtnVideoUrl +'</p>';
+			artstInfoHtml += '        <p><a href = "'+ artstInfo.artistInfo.artstPromtnVideoUrl +'">'+ artstInfo.artistInfo.artstPromtnVideoUrl +' </a></p>';
 		}
 		artstInfoHtml += '	</dd>';
 		artstInfoHtml += '</dl>';
