--- a/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetailWork.html
+++ b/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetailWork.html
@@ -15,11 +15,10 @@
 		
 			<ul class="nav nav-pills ait-nav" id="pills-tab" role="tablist">
 				<li class="nav-item ">
-					<a class="nav-link" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="false">작가프로필보기</a>
+					<a class="nav-link" id="pills-home-tab" data-toggle="pill"  role="tab" aria-controls="pills-home" aria-selected="false">작가프로필보기</a>
 				</li>
 				<li class="nav-item active">
-					<a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="true">작품보기</a>
-					
+					<a class="nav-link" id="pills-profile-tab" data-toggle="pill" role="tab" aria-controls="pills-profile" aria-selected="true">작품보기</a>
 				</li>
 			</ul>
 			<div class="tab-content ait-tab" id="pills-tabContent">
