--- a/src/main/resources/templates/thymeleaf/fo/deal/dealMod.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/dealMod.html
@@ -179,8 +179,8 @@
 												<input type="file" id="workGrtUrl" class="upload-hidden" accept=".jpeg, .jpg, .png, .pdf" th:value="${result.work.workGrtUrl}"> 
 											</div>
 											<p class="table-p">
-												※ png, jpeg, pdf 형식으로 등록 해주세요<br/>
-												※ 향후에 거래로 등록 할 때에는 보증서 등록이 필요합니다. 보증서를 분실하셨다면 구매처에 재발급을 요청하시기 바랍니다.
+												※ 향후에 거래로 등록 할 때에는 보증서 등록이 필요합니다. 보증서를 분실하셨다면 구매처에 재발급을 요청하시기 바랍니다.<br/>
+												※ 파일 확장자는 jpg, jpeg로 용량은 5MB 미만으로 등록해주세요.
 											</p>
 										</td>
 									</tr>
@@ -211,7 +211,11 @@
 												<label for="workImgLefUrl">찾아보기</label> 
 												<input type="file" id="workImgLefUrl" class="upload-hidden" th:value="${result.work.workImgLefUrl}"> 
 											</div>
-											<p class="table-p">※ 작품의 질감, 액자의 파손, 크랙, 찢어짐 등 작품 상태와 관련된 사진을 등록해 주세요. (최대5장)<br/>배송 완료 시점에 사진과 다른 경우 구매자는 수취를 거부할 수 있습니다.</p>
+											<p class="table-p">
+												※ 작품의 질감, 액자의 파손, 크랙, 찢어짐 등 작품 상태와 관련된 사진을 등록해 주세요. (최대5장)<br/>
+												※ 배송 완료 시점에 사진과 다른 경우 구매자는 수취를 거부할 수 있습니다.<br/>
+												※ 파일 확장자는 jpg, jpeg로 용량은 5MB 미만으로 등록해주세요.
+											</p>
 										</td>
 									</tr>
 									<tr>
@@ -223,7 +227,11 @@
 												<label for="workImgRitUrl">찾아보기</label> 
 												<input type="file" id="workImgRitUrl" class="upload-hidden" th:value="${result.work.workImgRitUrl}"> 
 											</div>
-											<p class="table-p">※ 작품의 질감, 액자의 파손, 크랙, 찢어짐 등 작품 상태와 관련된 사진을 등록해 주세요. (최대5장)<br/>배송 완료 시점에 사진과 다른 경우 구매자는 수취를 거부할 수 있습니다.</p>
+											<p class="table-p">
+												※ 작품의 질감, 액자의 파손, 크랙, 찢어짐 등 작품 상태와 관련된 사진을 등록해 주세요. (최대5장)<br/>
+												※ 배송 완료 시점에 사진과 다른 경우 구매자는 수취를 거부할 수 있습니다.<br/>
+												※ 파일 확장자는 jpg, jpeg로 용량은 5MB 미만으로 등록해주세요.
+											</p>
 										</td>
 									</tr>
 									<tr>
@@ -235,7 +243,11 @@
 												<label for="workImgTopUrl">찾아보기</label> 
 												<input type="file" id="workImgTopUrl" class="upload-hidden" th:value="${result.work.workImgTopUrl}"> 
 											</div>
-											<p class="table-p">※ 작품의 질감, 액자의 파손, 크랙, 찢어짐 등 작품 상태와 관련된 사진을 등록해 주세요. (최대5장)<br/>배송 완료 시점에 사진과 다른 경우 구매자는 수취를 거부할 수 있습니다.</p>
+											<p class="table-p">
+												※ 작품의 질감, 액자의 파손, 크랙, 찢어짐 등 작품 상태와 관련된 사진을 등록해 주세요. (최대5장)<br/>
+												※ 배송 완료 시점에 사진과 다른 경우 구매자는 수취를 거부할 수 있습니다.<br/>
+												※ 파일 확장자는 jpg, jpeg로 용량은 5MB 미만으로 등록해주세요.
+											</p>
 										</td>
 									</tr>
 									<tr>
@@ -247,7 +259,11 @@
 												<label for="workImgBotUrl">찾아보기</label> 
 												<input type="file" id="workImgBotUrl" class="upload-hidden" th:value="${result.work.workImgBotUrl}"> 
 											</div>
-											<p class="table-p">※ 작품의 질감, 액자의 파손, 크랙, 찢어짐 등 작품 상태와 관련된 사진을 등록해 주세요. (최대5장)<br/>배송 완료 시점에 사진과 다른 경우 구매자는 수취를 거부할 수 있습니다.</p>
+											<p class="table-p">
+												※ 작품의 질감, 액자의 파손, 크랙, 찢어짐 등 작품 상태와 관련된 사진을 등록해 주세요. (최대5장)<br/>
+												※ 배송 완료 시점에 사진과 다른 경우 구매자는 수취를 거부할 수 있습니다.<br/>
+												※ 파일 확장자는 jpg, jpeg로 용량은 5MB 미만으로 등록해주세요.
+											</p>
 										</td>
 									</tr>
 									<tr>
@@ -380,7 +396,7 @@
 								<div id="collapseOne" class="panel-collapse2 collapse" role="tabpanel" aria-labelledby="headingOne">
 									<div class="panel-body">
 										<div class="coll-text">
-											■ 거래 부적합 미술품</br>
+											■ 거래 부적합 미술품<br/>
 											1.작품 보증서 등의 위조, 변조<br/>
 											(정당한 권한이 없는 자가 타인의 명의를 도용하여 보증서의 내용을 작성하거나 변경한 것)<br/>
 
@@ -896,7 +912,7 @@ function dealReg(){
 	if(!$("#cbx_bidAgree1").is(":checked") || !$("#cbx_bidAgree2").is(":checked") 
 			|| !$("#cbx_bidAgree3").is(":checked") || !$("#cbx_bidAgree4").is(":checked") || !$("#cbx_bidAgree5").is(":checked")){
 		$('body').css("overflow", "scroll");
-		modalAlertShow("모든 사항에 동의가 되어있지 않습니다!</br>모든 사항에 동의를 해야 응찰이 가능합니다.");
+		modalAlertShow("모든 사항에 동의가 되어있지 않습니다!<br/>모든 사항에 동의를 해야 응찰이 가능합니다.");
 		return;
 	}else{
 		
