--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_buy.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_buy.html
@@ -713,7 +713,27 @@ function btn_paymethod_onclick(obj){
 			paymntDivCd : "B" //결제 구분 코드 (B 구매자/S 판매자)
 			};
 	if(result.dealInfo.paymethod == null || result.dealInfo.paymethod == ""){
-		modalAlertShow("결제 수단이 선택되지 않았습니다.")
+		modalAlertShow("결제 수단이 선택되지 않았습니다.");
+		return false;
+	}
+	if(result.dealInfo.paymethod == "VACCT"){
+		$.ajax({
+			type: "POST",
+			contentType: 'application/json',
+	        url: "/payment/VACCTOverlapChk",
+	        dataType: 'json',
+	        data: JSON.stringify(data),
+	        async: false,
+			success:function(response){
+				if(response.result != null){
+					modalAlertShow("동일한 거래에 가상계좌 입금 신청이 있습니다. <br/>입금 은행 : "+response.result.bankName+"<br/>입금 계좌 : "+response.result.accountNo+"<br/>입금 금액 : "+response.result.amount);
+					return false;
+				}
+			},
+			error: function(error) {
+	            alert("오류 발생" + error);
+	        }
+		}); 
 	}
 	if(result.dealInfo.buyPaymntSttsCd == "1PW"){ //1차 결제
 		data.paymntTypCd = "1"; //거래 차수
