--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_sell.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_sell.html
@@ -602,6 +602,26 @@ function btn_payment(){
 			};
 	if(result.dealInfo.paymethod == null || result.dealInfo.paymethod == ""){
 		modalAlertShow("결제 수단이 선택되지 않았습니다.")
+		return false;
+	}
+	if(result.dealInfo.paymethod == "VACCT"){
+		$.ajax({
+			type: "POST",
+			contentType: 'application/json',
+	        url: "/payment/VACCTOverlapChk",
+	        dataType: 'json',
+	        data: JSON.stringify(data),
+	        async: false,
+			success:function(response){
+				if(response.result != null){
+					modalAlertShow("동일한 거래에 가상계좌 입금 신청이 있습니다. <br/>입금 은행 : "+response.result.bankName+"<br/>입금 계좌 : "+response.result.accountNo+"<br/>입금 금액 : "+response.result.amount);
+					return false;
+				}
+			},
+			error: function(error) {
+	            alert("오류 발생" + error);
+	        }
+		}); 
 	}
 	if(result.dealInfo.sellPaymntSttsCd == "2PW"){
 		if(totalAmount == "0"){
