--- a/src/main/resources/templates/thymeleaf/fo/myPage/myWork_reg.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myWork_reg.html
@@ -96,7 +96,10 @@
 											<label for="workMainImgUrl">찾아보기</label> 
 											<input type="file" id="workMainImgUrl" class="upload-hidden"> 
 										</div>
-										<p class="table-p">※ 작품이 꽉 차게 나온 대표 사진 입니다. 관리자가 배경을 제거하고 다시 등록할 수 있습니다.</p>
+										<p class="table-p">
+											※ 작품이 꽉 차게 나온 대표 사진 입니다. 관리자가 배경을 제거하고 다시 등록할 수 있습니다.<br/>
+											※ 파일 확장자는 jpg, jpeg로 용량은 5MB 미만으로 등록해주세요.
+										</p>
 									</td>
 								</tr>
 								<tr>
@@ -107,7 +110,10 @@
 											<label for="workImgFrtUrl">찾아보기</label> 
 											<input type="file" id="workImgFrtUrl" class="upload-hidden"> 
 										</div>
-										<p class="table-p">※ 작품이 꽉 차게 나온 전면 사진 입니다. 관리자가 배경을 제거하고 다시 등록할 수 있습니다.</p>
+										<p class="table-p">
+											※ 작품이 꽉 차게 나온 대표 사진 입니다. 관리자가 배경을 제거하고 다시 등록할 수 있습니다.<br/>
+											※ 파일 확장자는 jpg, jpeg로 용량은 5MB 미만으로 등록해주세요.
+										</p>
 									</td>
 								</tr>
 								<tr>
@@ -118,7 +124,10 @@
 											<label for="workImgRerUrl">찾아보기</label> 
 											<input type="file" id="workImgRerUrl" class="upload-hidden"> 
 										</div>
-										<p class="table-p">※ 작품이 꽉 차게 나온 전면 사진 입니다. 관리자가 배경을 제거하고 다시 등록할 수 있습니다.</p>
+										<p class="table-p">
+											※ 작품이 꽉 차게 나온 대표 사진 입니다. 관리자가 배경을 제거하고 다시 등록할 수 있습니다.<br/>
+											※ 파일 확장자는 jpg, jpeg로 용량은 5MB 미만으로 등록해주세요.
+										</p>
 									</td>
 								</tr>
 								<tr>
@@ -202,8 +211,8 @@
 											<input type="file" id="workGrtUrl" class="upload-hidden" accept=".jpeg, .jpg, .png, .pdf"> 
 										</div>
 										<p class="table-p">
-											※ png, jpeg, pdf 형식으로 등록 해주세요<br/>
-											※ 향후에 거래로 등록 할 때에는 보증서 등록이 필요합니다. 보증서를 분실하셨다면 구매처에 재발급을 요청하시기 바랍니다.
+											※ 향후에 거래로 등록 할 때에는 보증서 등록이 필요합니다. 보증서를 분실하셨다면 구매처에 재발급을 요청하시기 바랍니다.<br/>
+											※ 파일 확장자는 jpg, jpeg로 용량은 5MB 미만으로 등록해주세요.
 										</p>
 									</td>
 								</tr>
@@ -219,7 +228,11 @@
 											<label for="workImgLefUrl">찾아보기</label> 
 											<input type="file" id="workImgLefUrl" class="upload-hidden"> 
 										</div>
-										<p class="table-p">※ 작품의 질감, 액자의 파손, 크랙, 찢어짐 등 작품 상태와 관련된 사진을 등록해 주세요. (최대5장)<br/>배송 완료 시점에 사진과 다른 경우 구매자는 수취를 거부할 수 있습니다.</p>
+										<p class="table-p">
+											※ 작품의 질감, 액자의 파손, 크랙, 찢어짐 등 작품 상태와 관련된 사진을 등록해 주세요. (최대5장)<br/>
+											※ 배송 완료 시점에 사진과 다른 경우 구매자는 수취를 거부할 수 있습니다.<br/>
+											※ 파일 확장자는 jpg, jpeg로 용량은 5MB 미만으로 등록해주세요.
+										</p>
 									</td>
 								</tr>
 								<tr>
@@ -230,7 +243,11 @@
 											<label for="workImgRitUrl">찾아보기</label> 
 											<input type="file" id="workImgRitUrl" class="upload-hidden" required> 
 										</div>
-										<p class="table-p">※ 작품의 질감, 액자의 파손, 크랙, 찢어짐 등 작품 상태와 관련된 사진을 등록해 주세요. (최대5장)<br/>배송 완료 시점에 사진과 다른 경우 구매자는 수취를 거부할 수 있습니다.</p>
+										<p class="table-p">
+											※ 작품의 질감, 액자의 파손, 크랙, 찢어짐 등 작품 상태와 관련된 사진을 등록해 주세요. (최대5장)<br/>
+											※ 배송 완료 시점에 사진과 다른 경우 구매자는 수취를 거부할 수 있습니다.<br/>
+											※ 파일 확장자는 jpg, jpeg로 용량은 5MB 미만으로 등록해주세요.
+										</p>
 									</td>
 								</tr>
 								<tr>
@@ -241,7 +258,11 @@
 											<label for="workImgTopUrl">찾아보기</label> 
 											<input type="file" id="workImgTopUrl" class="upload-hidden"> 
 										</div>
-										<p class="table-p">※ 작품의 질감, 액자의 파손, 크랙, 찢어짐 등 작품 상태와 관련된 사진을 등록해 주세요. (최대5장)<br/>배송 완료 시점에 사진과 다른 경우 구매자는 수취를 거부할 수 있습니다.</p>
+										<p class="table-p">
+											※ 작품의 질감, 액자의 파손, 크랙, 찢어짐 등 작품 상태와 관련된 사진을 등록해 주세요. (최대5장)<br/>
+											※ 배송 완료 시점에 사진과 다른 경우 구매자는 수취를 거부할 수 있습니다.<br/>
+											※ 파일 확장자는 jpg, jpeg로 용량은 5MB 미만으로 등록해주세요.
+										</p>
 									</td>
 								</tr>
 								<tr>
@@ -252,7 +273,11 @@
 											<label for="workImgBotUrl">찾아보기</label> 
 											<input type="file" id="workImgBotUrl" class="upload-hidden"> 
 										</div>
-										<p class="table-p">※ 작품의 질감, 액자의 파손, 크랙, 찢어짐 등 작품 상태와 관련된 사진을 등록해 주세요. (최대5장)<br/>배송 완료 시점에 사진과 다른 경우 구매자는 수취를 거부할 수 있습니다.</p>
+										<p class="table-p">
+											※ 작품의 질감, 액자의 파손, 크랙, 찢어짐 등 작품 상태와 관련된 사진을 등록해 주세요. (최대5장)<br/>
+											※ 배송 완료 시점에 사진과 다른 경우 구매자는 수취를 거부할 수 있습니다.<br/>
+											※ 파일 확장자는 jpg, jpeg로 용량은 5MB 미만으로 등록해주세요.
+										</p>
 									</td>
 								</tr>
 								<tr>
