--- a/src/main/resources/templates/thymeleaf/footer.html
+++ b/src/main/resources/templates/thymeleaf/footer.html
@@ -23,7 +23,7 @@
 				</div>
 				
 				<div class="pc-on">
-					<div class="footer-text">상호 : (주)맨션나인  대표 : 이영선  사업자등록번호 : 473-81-01206 <a href="javascript:void(0);" onclick="window.open('http://www.ftc.go.kr/bizCommPop.do?wrkr_no=4738101206', 'bizCommPop', 'width=750, height=700;');">[사업자정보확인]</a> </div>
+					<div class="footer-text">상호 : 맨션나인 주식회사  대표 : 이영선  사업자등록번호 : 473-81-01206 <a href="javascript:void(0);" onclick="window.open('http://www.ftc.go.kr/bizCommPop.do?wrkr_no=4738101206', 'bizCommPop', 'width=750, height=700;');">[사업자정보확인]</a> </div>
 					<div class="footer-text">
 						<ol>
 							<li>주소 : 03970 서울특별시 마포구 성산동 258-22</li>
@@ -44,7 +44,7 @@
 				
 				
 				<div class="tb-on max-100">
-					<div class="footer-text">상호 : (주)맨션나인  대표 : 이영선  사업자등록번호 : 473-81-01206 <a href="javascript:void(0);" onclick="window.open('http://www.ftc.go.kr/bizCommPop.do?wrkr_no=4738101206', 'bizCommPop', 'width=750, height=700;');">[사업자정보확인]</a> </div>
+					<div class="footer-text">상호 : 맨션나인 주식회사  대표 : 이영선  사업자등록번호 : 473-81-01206 <a href="javascript:void(0);" onclick="window.open('http://www.ftc.go.kr/bizCommPop.do?wrkr_no=4738101206', 'bizCommPop', 'width=750, height=700;');">[사업자정보확인]</a> </div>
 					<div class="footer-text">
 						<ol>
 							<li class="dib af-dn">주소 : 03970 서울특별시 마포구 성산동 258-22</li>
@@ -61,7 +61,7 @@
 				</div>
 				
 				<div class="mo-on max-100">
-					<div class="footer-text">상호 : (주)맨션나인<br/>대표 : 이영선</div>
+					<div class="footer-text">상호 : 맨션나인 주식회사<br/>대표 : 이영선</div>
 					<div class="footer-text">
 						<ol>
 							<li class="dib af-dn">주소 : 03970 서울특별시 마포구 성산동 258-22</li>
