--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_list.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_list.html
@@ -26,7 +26,7 @@
 		                           <div class="is-sum">
 		                           	  <div class="is-label1">
 		                           	  	<label>거래 구분</label>
-			                              <select class="selectpicker" id="buyOrSell" data-width="fit">
+			                              <select class="selectpicker" id="buyOrSell" data-width="fit" disabled>
 			                                 <option value="ALL">전체</option>
 			                                 <option value="BUY">구매 내역</option>
 			                                 <option value="SELL">판매 내역</option>
