모바일 > 딜 > 필터 : 그림 -> 사진

--- a/src/main/resources/templates/thymeleaf/fo/deal/deal.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/deal.html
@@ -448,7 +448,7 @@
 							</div>
 							<div class="db-div">
                                 <input type="checkbox" id="v33" name="workClsfcCd" value="PICTURE" class="searchOption"/>
-								<label for="v33"><span></span>그림</label>
+								<label for="v33"><span></span>사진</label>
 							</div>
 							<!-- <div class="db-div">
                                 <input type="checkbox" id="v1" name="workClsfcCd" value="ORNTPAI" class="searchOption"/>
