파비콘 적용

--- a/src/main/resources/templates/thymeleaf/fo/about/serviceIntro.html
+++ b/src/main/resources/templates/thymeleaf/fo/about/serviceIntro.html
@@ -9,6 +9,9 @@
     	.hd-div{background-color:#fff;}
     	.swiper-slide{background-color:rgb(255 255 255 / 0%);}
     </style>
+    
+    <link rel="icon" type="image/png" href="/resources/img/favicon.png">
+    
 </head>
 
 <body>
