--- a/src/main/resources/templates/thymeleaf/fo/artistLibrary/artist.html
+++ b/src/main/resources/templates/thymeleaf/fo/artistLibrary/artist.html
@@ -12,6 +12,8 @@
 			height:32px;
     	};
     </style>
+    
+    <link rel="icon" type="image/png" href="/resources/img/favicon.png">
 </head>
 
 <body>
