--- a/src/main/resources/templates/thymeleaf/fo/mgz/exhibition.html
+++ b/src/main/resources/templates/thymeleaf/fo/mgz/exhibition.html
@@ -7,6 +7,9 @@
     	.footer-wrap{margin-top:0;}
     	.hd-div{background-color:#fff;}
     </style>
+    
+    <link rel="icon" type="image/png" href="/resources/img/favicon.png">
+    
 </head>
 
 <body>
