--- a/src/main/resources/templates/thymeleaf/result_work.html
+++ b/src/main/resources/templates/thymeleaf/result_work.html
@@ -106,8 +106,8 @@
 									</div>
 								</div>
 							</div>
-							<div class="panel panel-default">
-								<!-- <div class="panel-heading" role="tab" id="heading5">
+							<!-- <div class="panel panel-default">
+								<<div class="panel-heading" role="tab" id="heading5">
 									<h4 class="panel-title">
 										<a data-toggle="collapse" data-parent="#accordion5" href="#collapse5" aria-expanded="true" aria-controls="collapse5">
 											유형
@@ -118,7 +118,7 @@
 									<div class="panel-body">
 									
 									</div>
-								</div> -->
+								</div> 
 							</div>
 							<div class="panel panel-default">
 								<div class="panel-heading" role="tab" id="heading6">
@@ -133,7 +133,7 @@
 									
 									</div>
 								</div>
-							</div>
+							</div> -->
 						</div>
 						<button type="button" class="btn-more2" onclick="searchOptionReset()"><span>reset</span></button>
 					</div>
