--- a/src/main/resources/static/css/ui_tablet.css
+++ b/src/main/resources/static/css/ui_tablet.css
@@ -1805,7 +1805,12 @@ input[type="radio"]:checked + label span {
     padding-bottom: 1.4rem;
 }
 .be-title h3{
-    font-size: 5rem;
+    font-size: 6rem;
+    color: #333333;
+    padding-bottom: 1.4rem;
+}
+.be-title h4{
+    font-size: 4rem;
     color: #333333;
 }
 .be-title .phos{
