--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_list.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_list.html
@@ -62,7 +62,7 @@
 				                      </div>
 				                      <div class="is-label">
 		                              	<label></label>
-		                              	<button type="button" class="sech-btn" id="searchOption_ALL" onclick="searchOption_onclick(this.id)">전체(기간선택)</button>
+		                              	<button type="button" class="sech-btn" id="searchOption_ALL" onclick="searchOption_onclick(this.id)">기간선택</button>
 				                        <button type="button" class="sech-btn" id="searchOption_6M" onclick="searchOption_onclick(this.id)">최근 6개월</button>
 				                        <button type="button" class="sech-btn" id="searchOption_1Y" onclick="searchOption_onclick(this.id)">최근 1년</button>
 				                        <button type="button" class="sech-btn" id="searchOption_2Y" onclick="searchOption_onclick(this.id)">최근 2년</button>
